# 808x-midterm-project

./: .gitignore  CMakeLists.txt  README.md  cpplint_error_report.txt  requirements.sh  todo.md
.github/workflows/: main.yml
app/: CMakeLists.txt  camera.cpp  detector.cpp  humantracker.cpp  main.cpp  tracker.cpp  utils.cpp
docs/html/: annotated.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera_8hpp__incl.md5  camera_8hpp_source.html  classacme_1_1Camera-members.html  classacme_1_1Camera.html  classacme_1_1Camera__coll__graph.map  classacme_1_1Camera__coll__graph.md5  classacme_1_1Camera_a26cc5ca1c8df00cd2635e0f83126c806_cgraph.map  classacme_1_1Camera_a26cc5ca1c8df00cd2635e0f83126c806_cgraph.md5  classacme_1_1Camera_a487ab48aefe21c68c18ed3db1dfa284d_cgraph.map  classacme_1_1Camera_a487ab48aefe21c68c18ed3db1dfa284d_cgraph.md5  classacme_1_1Camera_a757aa547b5cc271d4dbb5290f61cf309_cgraph.map  classacme_1_1Camera_a757aa547b5cc271d4dbb5290f61cf309_cgraph.md5  classacme_1_1Camera_ae0295b43e985ef1afb839c8d112a394d_cgraph.map  classacme_1_1Camera_ae0295b43e985ef1afb839c8d112a394d_cgraph.md5  classacme_1_1Camera_ae47756fecba860d82a66b2fe532b3e0d_icgraph.map  classacme_1_1Camera_ae47756fecba860d82a66b2fe532b3e0d_icgraph.md5  classacme_1_1Detector-members.html  classacme_1_1Detector.html  classacme_1_1Detector__coll__graph.map  classacme_1_1Detector__coll__graph.md5  classacme_1_1Detector_ab04739fa16a726007f5636ace9e37c31_icgraph.map  classacme_1_1Detector_ab04739fa16a726007f5636ace9e37c31_icgraph.md5  classacme_1_1Detector_abfbfa157cf25ea84dda611748bbbaac6_cgraph.map  classacme_1_1Detector_abfbfa157cf25ea84dda611748bbbaac6_cgraph.md5  classacme_1_1Detector_ac349d60c3ed4ae950e9ef32ce5dbc425_icgraph.map  classacme_1_1Detector_ac349d60c3ed4ae950e9ef32ce5dbc425_icgraph.md5  classacme_1_1HumanTracker-members.html  classacme_1_1HumanTracker.html  classacme_1_1HumanTracker__coll__graph.map  classacme_1_1HumanTracker__coll__graph.md5  classacme_1_1HumanTracker_a2d23ebef1214d86261d58b31d15dcf12_cgraph.map  classacme_1_1HumanTracker_a2d23ebef1214d86261d58b31d15dcf12_cgraph.md5  (+95 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  (+56 more)
include/: CMakeLists.txt  camera.hpp  detector.hpp  humantracker.hpp  tracker.cpp  tracker.hpp  utils.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp
